# url-shorter

./: .gitignore  README.md  pyproject.toml  style.css
src/app/: main.py
src/database/: database.py
src/public/: index.css  index.html  index.js
